--- a/css/creative.css
+++ b/css/creative.css
@@ -334,3 +334,24 @@ header.masthead h3 {
     font-size: 22px;
   }
 }
+
+@media (max-width: 768px) {
+  .portfolio-box .portfolio-box-caption {
+    position: relative;
+    opacity: 1;
+    background: transparent;
+  }
+  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
+    position: relative;
+    -webkit-transform: none;
+    transform: none;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
+    font-size: 16px;
+  }
+  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+    font-size: 22px;
+  }
+}
