--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -58,4 +58,23 @@
       }
     }
   }
+  @media (max-width: 768px) {
+    .portfolio-box-caption {
+      position: relative;
+      opacity: 1;
+      background: transparent;
+      .portfolio-box-caption-content {
+        position: relative;
+        transform: none;
+        padding: 10px;
+        margin-bottom: 10px;
+        .project-category {
+          font-size: 16px;
+        }
+        .project-name {
+          font-size: 22px;
+        }
+      }
+    }
+  }
 }
